--- a/exemplo/index.html
+++ b/exemplo/index.html
@@ -15,7 +15,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa nam exercitationem quasi sequi autem. Vero sequi fugit a veniam quod obcaecati non alias, consectetur maiores modi possimus voluptas, adipisci commodi.</p>
     <p>Tudo em ordem</p>
 
-    <h3>Mais um teste</h3>
+    <h3>Mais um teste!</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis voluptatibus quas sint! Inventore, suscipit officia delectus animi est reprehenderit ducimus iure, nobis fugiat ea libero iste laudantium et totam debitis!</p>
 </body>
 </html>
